--- a/ui/static/css/stylesheet.css
+++ b/ui/static/css/stylesheet.css
@@ -42,6 +42,10 @@ p.description {
   text-align: justify;
 }
 
+.article-image {
+    margin: 5px;
+}
+
 div.alert>p {
   text-align: center;
   margin-top: 1rem;
